--- a/index_2.html
+++ b/index_2.html
@@ -39,6 +39,22 @@
                         <label for="date">Enter a Date</label>
                         <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
                       </li>
+                      <li class="filter list-group-item">
+                        <label for="city">Enter a city</label>
+                        <input class="form-control" id="city" type="text" placeholder="hamilton">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="city">Enter a state</label>
+                        <input class="form-control" id="state" type="text" placeholder="MT">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="city">Enter a country</label>
+                        <input class="form-control" id="country" type="text" placeholder="iceland">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="city">Enter a shape</label>
+                        <input class="form-control" id="shape" type="text" placeholder="fireball">
+                      </li>
                     </ul>
                   </div>
                   <button id="filter-btn-date" type="submit" class="btn btn-default">Filter Table</button>
